# kafe

./: Cargo.toml  README.md
src/: cli.rs  descriptors.rs  main.rs  schema_registry.rs  util.rs
