[package]
name = "kafe"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.5.59", features = ["derive"] }
color-eyre = "0.6.5"
eyre = "0.6.12"
integer-encoding = "4.1.0"
leb128 = "0.2.5"
percent-encoding = "2.3.2"
prost = "0.14.3"
prost-reflect = { version = "0.16.3", features = ["serde"] }
protobuf-native = "0.3.3"
rdkafka = "0.39.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
ureq = { version = "3.2.0", features = ["json"] }
varint = "0.9.0"
zigzag-rs = "0.2.1"
